--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Joey Park</title>
     <meta charset="utf-8" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Gelasio:500,600|Lato:300,400,700,900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/html5up-astral/assets/css/main.css" />
+    <noscript><link rel="stylesheet" href="%PUBLIC_URL%/html5up-astral/assets/css/noscript.css" /></noscript>
   </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+  <body class="is-preload">
     <div id="root"></div>
   </body>
 </html>
