--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="%PUBLIC_URL%/html5up-astral/assets/css/main.css" />
     <noscript><link rel="stylesheet" href="%PUBLIC_URL%/html5up-astral/assets/css/noscript.css" /></noscript>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
   </head>
   <body class="is-preload">
     <div id="root"></div>
